[gd_scene load_steps=8 format=2]

[ext_resource path="res://Weapons/GrenadeLauncher.gd" type="Script" id=1]
[ext_resource path="res://assets/weapons/grenade.obj" type="ArrayMesh" id=2]
[ext_resource path="res://assets/sounds/swoosh.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/weapons/fist.obj" type="ArrayMesh" id=4]
[ext_resource path="res://assets/sounds/charge.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/materials/lowpoly_material.tres" type="Material" id=6]

[sub_resource type="Animation" id=1]
resource_name = "throw"

[node name="GrenadeLauncher" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0 )
script = ExtResource( 1 )

[node name="Muzzle" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 0.707107, -0.707107, 0, 0.707107, 0.707107, 0, 0, -0.491819 )

[node name="ChargeAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="ThrowAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/throw = SubResource( 1 )

[node name="Arm1" type="Spatial" parent="."]
transform = Transform( 0.707107, -0.707107, 0, 0.707107, 0.707107, 0, 0, 0, 1, -0.284661, 0, -0.373346 )

[node name="Fist" type="MeshInstance" parent="Arm1"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
material_override = ExtResource( 6 )
mesh = ExtResource( 4 )
material/0 = ExtResource( 6 )

[node name="Arm2" type="Spatial" parent="."]
transform = Transform( -0.796013, 0.60528, 0, -0.60528, -0.796013, 0, 0, 0, 1, 0.232007, 0, -0.515751 )

[node name="Fist" type="MeshInstance" parent="Arm2"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
material_override = ExtResource( 6 )
mesh = ExtResource( 4 )
material/0 = ExtResource( 6 )

[node name="Grenade" type="MeshInstance" parent="Arm2"]
transform = Transform( -0.0448228, -0.998994, 0, 0.998994, -0.0448228, 0, 0, 0, 1, -0.0400521, -0.0525675, 0 )
material_override = ExtResource( 6 )
mesh = ExtResource( 2 )
material/0 = ExtResource( 6 )

[connection signal="finished" from="ChargeAudio" to="." method="_on_ChargeAudio_finished"]
